Adding project library tables

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 /hardware/kicad/.history/
-/hardware/kicad/rollercoasterometer2026-backups/*
-
 /data/
+/hardware/kicad/rollercoasterometer2026-backups/
